<resources>
    <string name="app_name">ProntoShop</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_product_found">No product found</string>
    <string name="no_customer_found">No customer found</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="label_zero_dollar">$0.00</string>
    <string name="label_tax">Tax - 8%</string>
    <string name="label_total">Total Amount</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_card">Card</string>
    <string name="payment_type_paypal">Paypal</string>
    <string name="label_clear">Clear</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_category">Category</string>
    <string name="label_product_name">Product Name</string>
    <string name="product_description">Product Image</string>
    <string name="quantity">qty</string>
    <string name="delete">Delete</string>
</resources>
